--- a/style/home/index.css
+++ b/style/home/index.css
@@ -53,5 +53,52 @@ table {
 }
 
 /* end reset */
+.spiritBox {
+  background-color: #313a49;
+  color: #f7f8f9;
+}
+
+.spiritBox .lowerBox {
+  display: -webkit-box;
+  display: ms-flex-box;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+.spiritBox {
+  display: -webkit-box;
+  display: ms-flex-box;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+
+.spiritBox {
+  height: 8.25rem;
+  width: 5rem;
+  border: 1px solid #313a49;
+}
+.spiritBox .spiritImgContainer {
+  width: 100%;
+  max-height: 80%;
+  min-height: 70%;
+  border-bottom: 1px solid #45494f;
+}
+.spiritBox .spiritImgContainer img {
+  width: 100%;
+  height: 100%;
+  padding: 0.25rem;
+}
+.spiritBox .lowerBox {
+  font-size: 1.125rem;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+.spiritBox .lowerBox img {
+  width: 0.75rem;
+  height: 0.75rem;
+}
 
 /*# sourceMappingURL=index.css.map */
