--- a/style/home/index.css
+++ b/style/home/index.css
@@ -53,12 +53,22 @@ table {
 }
 
 /* end reset */
-.spiritBox {
+.spiritBox, .main, header {
   background-color: #313a49;
   color: #f7f8f9;
 }
 
-.spiritBox .lowerBox {
+footer, nav {
+  background-color: #45494f;
+  color: #b2b9c4;
+}
+
+nav .searchArea form input[type=submit]:hover {
+  background-color: #030f23;
+  color: #c2c3c4;
+}
+
+footer .fCol, footer, .spiritBox .lowerBox, nav {
   display: -webkit-box;
   display: ms-flex-box;
   display: -webkit-flex;
@@ -74,6 +84,82 @@ table {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
+}
+
+header {
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  height: 200px;
+}
+header .navImgContainer {
+  width: 100%;
+  height: 200px;
+  background: url("img/headerBG.png") no-repeat fixed center;
+  background-color: #313a49;
+}
+header h1 {
+  position: absolute;
+  top: 100px;
+  left: auto;
+}
+
+nav {
+  width: 100%;
+  height: 2rem;
+  margin-top: 1rem;
+}
+nav .hamburgerContainer {
+  margin-top: 0.5rem;
+  margin-left: 0.5rem;
+  align-self: flex-start;
+  width: 1.5rem;
+  height: 1.5rem;
+}
+nav .hamburgerContainer a {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+nav .hamburgerContainer a img {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+nav .searchArea {
+  align-self: center;
+  width: 60%;
+  height: 80%;
+  margin: 10% 0;
+}
+nav .searchArea form input[type=text] {
+  width: 70%;
+  height: 100%;
+  border-radius: 10px;
+  border-color: #b2b9c4;
+}
+nav .searchArea form input[type=submit] {
+  width: 25%;
+  margin-left: 5%;
+  height: 100%;
+  border-radius: 10px;
+  border-color: #b2b9c4;
+  transition: 0.5s;
+}
+nav .searchArea form input[type=submit]:hover {
+  border-color: #c2c3c4;
+}
+
+.gluedToTop {
+  position: static;
+  top: 0;
+}
+
+.main {
+  width: 100vw;
+  min-height: 800px;
 }
 
 .spiritBox {
@@ -99,6 +185,38 @@ table {
 .spiritBox .lowerBox img {
   width: 0.75rem;
   height: 0.75rem;
+}
+
+footer {
+  width: 100%;
+  height: 9.375rem;
+}
+footer .fCol {
+  flex-grow: 1;
+}
+footer .fCol .fSCol {
+  font-size: 0.75rem;
+}
+footer .fCol .fSCol a {
+  color: #c2c3c4;
+  text-decoration: none;
+  display: inline;
+}
+
+footer {
+  width: 100%;
+  height: 9.375rem;
+}
+footer .fCol {
+  flex-grow: 1;
+}
+footer .fCol .fSCol {
+  font-size: 0.75rem;
+}
+footer .fCol .fSCol a {
+  color: #c2c3c4;
+  text-decoration: none;
+  display: inline;
 }
 
 /*# sourceMappingURL=index.css.map */
