--- a/style/home/main.scss
+++ b/style/home/main.scss
@@ -2,7 +2,8 @@
 @import 'variables';
 @import 'genericMixins';
 @import 'extends';
-
+@import 'header';
+@import 'body';
 @import 'spiritBox';
-
+@import 'footer';
 @import 'footer';
