--- a/style/details/main.scss
+++ b/style/details/main.scss
@@ -1,1 +1,7 @@
 @import 'reset';
+@import 'variables';
+@import 'genericMixins';
+@import 'extends';
+@import 'body';
+@import 'nav';
+@import 'descBody';
