--- a/style/home/header.scss
+++ b/style/home/header.scss
@@ -7,7 +7,7 @@ header {
     .navImgContainer {
         width: 100%;
         height: 200px;
-        background: url('../img/headerBG.png') no-repeat fixed center;
+        background: url('../../img/headerBG.png') no-repeat fixed center;
         background-color: $bgc1;
     }
     h1 {
