--- a/style/home/index.css
+++ b/style/home/index.css
@@ -95,7 +95,7 @@ header {
 header .navImgContainer {
   width: 100%;
   height: 200px;
-  background: url("../img/headerBG.png") no-repeat fixed center;
+  background: url("../../img/headerBG.png") no-repeat fixed center;
   background-color: #313a49;
 }
 header h1 {
