--- a/style/details/main.scss
+++ b/style/details/main.scss
@@ -1,7 +1,6 @@
 @import 'reset';
-@import 'variables';
 @import 'genericMixins';
+@import 'variables';
 @import 'extends';
-@import 'body';
+@import 'desc';
 @import 'nav';
-@import 'descBody';
