--- a/style/details/nav.scss
+++ b/style/details/nav.scss
@@ -1,13 +1,6 @@
 nav {
     width: 100vw;
-    height: 9.375rem;
-    @extend %secondary-colors;
+    height: 100px;
     @extend %flex-row-nowrap;
     justify-content: space-around;
-    a {
-        border-right: 1px solid $fc3;
-        font-size: 1.125rem;
-        text-decoration: none;
-        color: inherit;
-    }
 }
