--- a/style/home/index.css
+++ b/style/home/index.css
@@ -68,7 +68,16 @@ nav .searchArea form input[type=submit]:hover {
   color: #c2c3c4;
 }
 
-footer .fCol, footer, .spiritBox .lowerBox, nav {
+.main {
+  display: -webkit-box;
+  display: ms-flex-box;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+footer .fCol, footer, .spiritBox a .lowerBox, nav {
   display: -webkit-box;
   display: ms-flex-box;
   display: -webkit-flex;
@@ -95,7 +104,7 @@ header {
 header .navImgContainer {
   width: 100%;
   height: 200px;
-  background: url("../../img/headerBG.png") no-repeat fixed center;
+  background: url("../img/headerBG.png") no-repeat fixed center;
   background-color: #313a49;
 }
 header h1 {
@@ -159,34 +168,48 @@ nav .searchArea form input[type=submit]:hover {
   top: 0;
 }
 
+body {
+  background-color: #313a49;
+  overflow-x: hidden;
+}
+
 .main {
-  width: 100vw;
+  width: 80vw;
+  margin: 10px auto;
   min-height: 800px;
 }
 
 .spiritBox {
-  height: 8.25rem;
-  width: 5rem;
+  height: 11.25rem;
+  width: 6.5rem;
+  margin: 0.75rem 1.5rem;
   border: 1px solid #313a49;
 }
-.spiritBox .spiritImgContainer {
-  width: 100%;
-  max-height: 80%;
-  min-height: 70%;
-  border-bottom: 1px solid #45494f;
-}
-.spiritBox .spiritImgContainer img {
-  width: 100%;
+.spiritBox a {
   height: 100%;
+  width: 100%;
+  color: inherit;
+  text-decoration: none;
+}
+.spiritBox a .spiritImgContainer {
+  width: 100%;
+  height: 80%;
+  border-bottom: 1px solid #45494f;
+  overflow: hidden;
+}
+.spiritBox a .spiritImgContainer img {
+  max-width: 100%;
+  height: auto;
+  width: auto;
   padding: 0.25rem;
 }
-.spiritBox .lowerBox {
+.spiritBox a .lowerBox {
   font-size: 1.125rem;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
-.spiritBox .lowerBox img {
-  width: 0.75rem;
-  height: 0.75rem;
+.spiritBox a .lowerBox img {
+  width: 1.25rem;
+  height: 1.25rem;
 }
 
 footer {
