--- a/style/home/spiritBox.scss
+++ b/style/home/spiritBox.scss
@@ -1,30 +1,38 @@
 .spiritBox {
     @extend %primary-colors;
     @extend %flex-column-nowrap;
-    height: 8.25rem;
-    width: 5rem;
+    height: 11.25rem;
+    width: 6.5rem;
+    margin: .75rem 1.5rem;
     //borders for ease of visual testing
     border: 1px solid $bgc1;
-    .spiritImgContainer {
+    a {
+        height: 100%;
         width: 100%;
-        max-height: 80%;
-        min-height: 70%;
-        //border for ease of visual testing
-        border-bottom: 1px solid $bgc2;
-        img {
+        color: inherit;
+        text-decoration: none;
+        .spiritImgContainer {
             width: 100%;
-            height: 100%;
-            padding: 0.25rem;
+            height: 80%;
+            //border for ease of visual testing
+            border-bottom: 1px solid $bgc2;
+            overflow: hidden;
+            img {
+                max-width: 100%;
+                height: auto;
+                width: auto;
+                padding: 0.25rem;
+            }
         }
-    }
-    .lowerBox {
-        @extend %flex-row-nowrap;
-        font-size: 1.125rem;
-        //placeholder font
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        img {
-            width: .75rem;
-            height: .75rem;
+        .lowerBox {
+            @extend %flex-row-nowrap;
+            font-size: 1.125rem;
+            //placeholder font
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            img {
+                width: 1.25rem;
+                height: 1.25rem;
+            }
         }
     }
 }
