--- a/style/home/main.scss
+++ b/style/home/main.scss
@@ -4,6 +4,6 @@
 @import 'extends';
 @import 'header';
 @import 'body';
+@import 'sidebar';
 @import 'spiritBox';
-@import 'footer';
 @import 'footer';
