--- a/style/home/index.css
+++ b/style/home/index.css
@@ -63,7 +63,7 @@ footer, nav {
   color: #b2b9c4;
 }
 
-nav .searchArea form input[type=submit]:hover {
+nav .searchArea .searchResults {
   background-color: #030f23;
   color: #c2c3c4;
 }
@@ -77,7 +77,7 @@ nav .searchArea form input[type=submit]:hover {
   flex-wrap: wrap;
 }
 
-footer .fCol, footer, .spiritBox a .lowerBox, nav {
+footer .fCol, footer, .spiritBox a .lowerBox, nav .searchArea form, nav {
   display: -webkit-box;
   display: ms-flex-box;
   display: -webkit-flex;
@@ -86,7 +86,7 @@ footer .fCol, footer, .spiritBox a .lowerBox, nav {
   flex-wrap: nowrap;
 }
 
-.spiritBox {
+.spiritBox, body, nav .searchArea {
   display: -webkit-box;
   display: ms-flex-box;
   display: -webkit-flex;
@@ -97,74 +97,39 @@ footer .fCol, footer, .spiritBox a .lowerBox, nav {
 
 header {
   width: 100vw;
-  margin: 0;
-  padding: 0;
-  height: 200px;
-}
-header .navImgContainer {
-  width: 100%;
-  height: 200px;
-  background: url("../img/headerBG.png") no-repeat fixed center;
-  background-color: #313a49;
+  padding: 1rem 0;
 }
 header h1 {
-  position: absolute;
-  top: 100px;
-  left: 50%;
-  font-size: 2.5rem;
-  background-color: rgba(49, 58, 73, 0.5);
+  font-size: 2rem;
+  text-align: center;
+  margin-top: 0;
 }
 
 nav {
-  width: 100%;
-  height: 2rem;
-  margin-top: 1rem;
+  width: 100vw;
+  height: 4rem;
+  justify-content: space-between;
 }
 nav .hamburgerContainer {
-  margin-top: 0.5rem;
-  margin-left: 0.5rem;
-  align-self: flex-start;
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 4rem;
+  height: 4rem;
 }
 nav .hamburgerContainer a {
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
+  width: 4rem;
+  height: 4rem;
 }
 nav .hamburgerContainer a img {
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-}
-nav .searchArea {
-  align-self: center;
-  width: 60%;
-  height: 80%;
-  margin: 10% 0;
+  width: 4rem;
+  height: 4rem;
 }
 nav .searchArea form input[type=text] {
-  width: 70%;
-  height: 100%;
   border-radius: 10px;
-  border-color: #b2b9c4;
 }
 nav .searchArea form input[type=submit] {
-  width: 25%;
-  margin-left: 5%;
-  height: 100%;
   border-radius: 10px;
-  border-color: #b2b9c4;
-  transition: 0.5s;
 }
-nav .searchArea form input[type=submit]:hover {
-  border-color: #c2c3c4;
-}
-
 .gluedToTop {
-  position: static;
+  position: fixed;
   top: 0;
 }
 
@@ -177,6 +142,19 @@ body {
   width: 80vw;
   margin: 10px auto;
   min-height: 800px;
+}
+
+#sidebar {
+  display: none;
+}
+
+.sidebar {
+  position: fixed;
+  left: 0;
+  width: 20vw;
+  height: 100vh;
+  background-color: #020202;
+  color: #edfeff;
 }
 
 .spiritBox {
@@ -210,22 +188,6 @@ body {
 .spiritBox a .lowerBox img {
   width: 1.25rem;
   height: 1.25rem;
-}
-
-footer {
-  width: 100%;
-  height: 9.375rem;
-}
-footer .fCol {
-  flex-grow: 1;
-}
-footer .fCol .fSCol {
-  font-size: 0.75rem;
-}
-footer .fCol .fSCol a {
-  color: #c2c3c4;
-  text-decoration: none;
-  display: inline;
 }
 
 footer {
