--- a/style/home/header.scss
+++ b/style/home/header.scss
@@ -11,6 +11,7 @@ header {
 nav {
     width: 100vw;
     height: 4rem;
+    overflow: block;
     @extend %flex-row-nowrap;
     @extend %secondary-colors;
     justify-content: space-between;
@@ -27,20 +28,50 @@ nav {
         }
     }
     .searchArea {
+        min-width: 40%;
+        max-width: 50%;
         @extend %flex-column-nowrap;
 
 
         form {
+            width: 100%;
             @extend %flex-row-nowrap;
             input[type="text"] {
                 border-radius: 10px;
+                flex-basis: 5;
+                flex-grow: 6;
             }
             input[type="submit"] {
                 border-radius: 10px;
+                flex-basis: 3;
+                flex-grow: 2;
             }
         }
         .searchResults {
             @extend %tertiary-colors;
+            @extend %flex-column-nowrap;
+            justify-content: center;
+            align-items: center;
+            z-index: 10000;
+            height: 100rem;
+            .searchResultHeader {
+                font-weight: 200;
+                font-size: 1.125rem;
+                margin-bottom: .25rem;
+            }
+            a {
+                width: 100%;
+                color: inherit;
+                text-decoration: none;
+                padding-top: .685rem;
+                padding-bottom: .25rem;
+                padding-left: .485rem;
+                transition: 0.5s;
+            }
+            a:hover{
+                background-color: $bgc2;
+
+            }
         }
     }
 }
