css work; refactoring; bugfixes;

--- a/style/home/extends.scss
+++ b/style/home/extends.scss
@@ -32,3 +32,9 @@
     flex-direction: column;
     flex-wrap: nowrap;
 }
+%primary-font {
+    font-family: 'Overpass', sans-serif;
+}
+%secondary-font {
+    font-family: 'Kaushan Script', cursive;
+}
