--- a/style/home/header.scss
+++ b/style/home/header.scss
@@ -50,6 +50,7 @@ nav {
         .searchResults {
             @extend %tertiary-colors;
             @extend %flex-column-nowrap;
+            display: none;
             justify-content: center;
             align-items: center;
             z-index: 10000;
