--- a/style/home/main.scss
+++ b/style/home/main.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Kaushan+Script|Overpass&display=swap');
+
 @import 'reset';
 @import 'variables';
 @import 'genericMixins';
