--- a/style/home/spiritBox.scss
+++ b/style/home/spiritBox.scss
@@ -1,38 +1,78 @@
 .spiritBox {
     @extend %primary-colors;
     @extend %flex-column-nowrap;
-    height: 11.25rem;
-    width: 6.5rem;
+    border: .35rem solid $bc1;
+    border-radius: 5px;
+    height: 13.25rem;
+    width: 8.5rem;
     margin: .75rem 1.5rem;
-    //borders for ease of visual testing
-    border: 1px solid $bgc1;
     a {
         height: 100%;
         width: 100%;
         color: inherit;
         text-decoration: none;
+        @extend %flex-column-nowrap;
         .spiritImgContainer {
-            width: 100%;
-            height: 80%;
-            //border for ease of visual testing
-            border-bottom: 1px solid $bgc2;
+            align-self: center;
+            @extend %flex-column-nowrap;
+            @extend %tertiary-colors;
+            border-radius: 10px;
+            justify-content: center;
+            align-items: center;
+            margin-top: .25rem;
+            width: 95%;
+            height: 70%;
+            
             overflow: hidden;
             img {
-                max-width: 100%;
+                max-height: 100%;
                 height: auto;
                 width: auto;
                 padding: 0.25rem;
             }
+            
+            
+        }
+        .upperBox {
+            @extend %flex-row-nowrap;
+            @extend %primary-colors;
+            @extend %secondary-font;
+            flex-direction: row-reverse;
+            justify-content: space-between;
+            img {
+                width: 1.75rem;
+                height: 1.75rem;
+                
+            }
+            .other {
+                width: 25%;
+                height: 25%;
+                margin: auto .25rem;
+            }
+            .mgs {
+                height: 1.75rem;
+                width: auto;
+            }
+            img, p {
+                margin: .25rem;
+            }
+            p {
+                font-size: 1.5rem;
+                font-weight: 200;
+            }
+            
         }
         .lowerBox {
             @extend %flex-row-nowrap;
-            font-size: 1.125rem;
+            @extend %primary-font;
+            font-size: 1rem;
+            overflow: inherit;
+            text-align: center;
             //placeholder font
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-            img {
-                width: 1.25rem;
-                height: 1.25rem;
-            }
+            align-items: center;
+            justify-content: center;
+            
         }
     }
 }
