--- a/style/home/variables.scss
+++ b/style/home/variables.scss
@@ -1,9 +1,10 @@
 // these colors are essentially random, so they are definitely subject to change!
 //make sure the font color contrasts well with the corresponding background color
-$bgc1: #313a49;
-$bgc2: #45494f;
-$bgc3: #030f23;
-$fc1: #f7f8f9;
-$fc2: #b2b9c4;
-$fc3: #c2c3c4;
+$bgc1: #061d4c;
+$bgc2: #3a506bb9;
+$bgc3: #e4fde1;
+$fc1: #c5cffd;
+$fc2: #ebebeb;
+$fc3: #2b2424;
 
+$bc1: #62929e;
