--- a/style/home/header.scss
+++ b/style/home/header.scss
@@ -60,7 +60,7 @@ nav {
                 font-size: 1.125rem;
                 margin-bottom: .25rem;
             }
-            a {
+            p, a {
                 width: 100%;
                 color: inherit;
                 text-decoration: none;
@@ -69,9 +69,9 @@ nav {
                 padding-left: .485rem;
                 transition: 0.5s;
             }
-            a:hover{
+            p:hover, a:hover{
                 background-color: $bgc2;
-
+                cursor: pointer;
             }
         }
     }
