--- a/style/home/index.css
+++ b/style/home/index.css
@@ -136,13 +136,13 @@ nav .searchArea {
   min-width: 40%;
   max-width: 50%;
 }
-nav .searchArea form {
-  width: 100%;
-}
-nav .searchArea form input[type=text] {
+nav .searchArea input[type=text] {
   border-radius: 10px;
   flex-basis: 5;
-  flex-grow: 6;
+  flex-grow: 0;
+}
+nav .searchArea form {
+  width: 100%;
 }
 nav .searchArea form input[type=submit] {
   border-radius: 10px;
