--- a/style/details/index.css
+++ b/style/details/index.css
@@ -58,12 +58,17 @@ table {
   color: #f7f8f9;
 }
 
-.descBody .descSection .descBox {
+.searchSection input[type=text], .descBody .descSection .descBox {
   background-color: #45494f;
   color: #b2b9c4;
 }
 
-nav, .descBody .descSection .secondary, .descBody {
+.sortSection, .searchSection {
+  background-color: #030f23;
+  color: #c2c3c4;
+}
+
+.sortSection .sortHead #sortSettings #sortSetRadios, nav, .descBody .descSection .secondary, .descBody {
   display: -webkit-box;
   display: ms-flex-box;
   display: -webkit-flex;
@@ -72,7 +77,16 @@ nav, .descBody .descSection .secondary, .descBody {
   flex-wrap: nowrap;
 }
 
-.descBody .descSection .descImgContainer, .descBody .descSection, body {
+.sortSection .sortHead #sortSettings #sortSetCheckboxes {
+  display: -webkit-box;
+  display: ms-flex-box;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.sortSection .sortHead #sortSettings, .sortSection, .searchSection #searchResults, .searchSection, .descBody .descSection .descImgContainer, .descBody .descSection, body {
   display: -webkit-box;
   display: ms-flex-box;
   display: -webkit-flex;
@@ -105,7 +119,6 @@ body {
   min-height: 20rem;
   width: 100%;
   height: 100%;
-  overflow: hidden;
 }
 .descBody .descSection .descImgContainer img {
   width: 100%;
@@ -139,10 +152,132 @@ body {
   width: 1.5rem;
 }
 
+@media screen and (max-width: 1000px) {
+  .descBody {
+    flex-direction: column;
+    align-self: center;
+    padding-bottom: 5rem;
+  }
+  .descBody .descSection .descImgContainer {
+    margin-bottom: 5rem;
+  }
+}
 nav {
   width: 100vw;
   height: 100px;
+  padding-top: 0.25rem;
   justify-content: space-around;
+}
+nav a {
+  color: inherit;
+  text-decoration: none;
+  cursor: pointer;
+}
+nav div {
+  cursor: pointer;
+}
+
+.searchSection {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  position: fixed;
+  top: 5rem;
+  right: 0;
+  width: 10rem;
+  height: 8rem !important;
+  margin-left: auto;
+  margin-right: auto;
+}
+.searchSection input[type=text] {
+  width: 90%;
+  height: 1rem;
+  border-radius: 10px;
+  margin: 0 auto;
+}
+.searchSection #searchResults p {
+  margin-left: 0.25rem;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 1000px) {
+  .searchSection {
+    position: static;
+    margin-top: 2rem;
+    width: 100%;
+    top: 2rem;
+  }
+  .searchSection #searchResults p {
+    text-align: center;
+  }
+}
+.sortSection {
+  position: fixed;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  left: 0rem;
+  top: 5rem;
+  width: 20rem;
+  height: 85vh;
+}
+.sortSection .sortHead #sortSettings #sortSetRadios {
+  align-items: center;
+}
+.sortSection .sortHead #sortSettings #sortSetCheckboxes {
+  height: 360px;
+  margin-top: 1rem;
+}
+.sortSection .sortHead #sortSettings #sortSetCheckboxes p {
+  position: absolute;
+  top: 2rem;
+}
+
+@media screen and (max-width: 1000px) {
+  .sortSection {
+    position: static;
+    width: 93%;
+    padding: 0 7%;
+    top: 4rem;
+  }
+  .sortSection .sortHead #sortSettings #sortSetCheckboxes {
+    margin-top: 3rem;
+    flex-direction: row;
+    height: 200px;
+  }
+  .sortSection .sortHead #sortSettings #sortSetCheckboxes div {
+    height: 20px;
+  }
+  .sortSection .sortHead #sortSettings #sortSetCheckboxes p {
+    top: 7.5rem;
+  }
+  .sortSection .sortHead #sortSettings #yearSlider {
+    height: 10rem !important;
+    margin-top: 0;
+    bottom: -10rem;
+    right: -80vw;
+  }
+}
+#yearSlider {
+  margin-top: 50px;
+  position: relative;
+  bottom: 2rem;
+  right: -18rem;
+  height: 10rem;
+}
+#yearSlider p {
+  position: relative;
+  top: -2rem;
+  right: 2.75rem;
+  width: 5rem;
+  overflow: show;
+}
+
+#searchBody {
+  position: relative;
+  top: -14rem;
+}
+#searchBody p {
+  cursor: pointer;
+  width: 50%;
 }
 
 /*# sourceMappingURL=index.css.map */
