--- a/style/details/nav.scss
+++ b/style/details/nav.scss
@@ -1,6 +1,15 @@
 nav {
     width: 100vw;
     height: 100px;
+    padding-top: .25rem;
     @extend %flex-row-nowrap;
     justify-content: space-around;
+    a {
+        color: inherit;
+        text-decoration: none;
+        cursor: pointer;
+    }
+    div {
+        cursor: pointer;
+    }
 }
